--- a/settings.json
+++ b/settings.json
@@ -3,9 +3,9 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"W A I F U", 
-"NomorOwner":"6281220670449", 
-"NamaOwner":"KurrGamtenk", 
+"NamaBot":"S E N P A I", 
+"NomorOwner":"6282287219167", 
+"NamaOwner":"SENPAI-CHAN", 
 "Dana":"081220670449", 
 "Ovo":"081220670449", 
 "Gopay":"081220670449", 
